Updates from Overleaf

--- a/draft_ABP.bib
+++ b/draft_ABP.bib
@@ -36,26 +36,53 @@
 }
 
 @article{Arkani-Hamed:2019plo,
-      author         = "Arkani-Hamed, Nima and He, Song and Lam, Thomas and
-                        Thomas, Hugh",
-      title          = "{Binary Geometries, Generalized Particles and Strings,
-                        and Cluster Algebras}",
-      year           = "2019",
-      eprint         = "1912.11764",
-      archivePrefix  = "arXiv",
-      primaryClass   = "hep-th",
-      SLACcitation   = "%%CITATION = ARXIV:1912.11764;%%"
+    author = "Arkani-Hamed, Nima and He, Song and Lam, Thomas and Thomas, Hugh",
+    title = "{Binary Geometries, Generalized Particles and Strings, and Cluster Algebras}",
+    eprint = "1912.11764",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-th",
+    month = "12",
+    year = "2019"
 }
 
-@article{article,
+@article{Arkani-Hamed:2020cig,
+    author = "Arkani-Hamed, Nima and Lam, Thomas and Spradlin, Marcus",
+    title = "{Positive configuration space}",
+    eprint = "2003.03904",
+    archivePrefix = "arXiv",
+    primaryClass = "math.CO",
+    month = "3",
+    year = "2020"
+}
+
+@unpublished{Arkani-Hamed:tobeappear,
+    author = "Arkani-Hamed, Nima and He, Song and Lam, Thomas",
+    title = "{Cluster configuration spaces}",
+    note = "In preparation"
+}
+
+@article{Arkani-Hamed:2019vag,
+    author = "Arkani-Hamed, Nima and He, Song and Salvatori, Giulio and Thomas, Hugh",
+    title = "{Causal Diamonds, Cluster Polytopes and Scattering Amplitudes}",
+    eprint = "1912.12948",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-th",
+    month = "12",
+    year = "2019"
+}
+
+@article{Postnikov:2005,
 author = {Postnikov, Alexander},
-year = {2005},
+title = {Permutohedra, Associahedra, and Beyond},
+eprint = "0507163",
+archivePrefix = "arXiv",
+primaryClass = "math",
+doi="doi.org/10.1093/imrn/rnn153",
+journal = {International Mathematics Research Notices},
+volume = {2009},
 month = {08},
 pages = {},
-title = {Permutohedra, Associahedra, and Beyond},
-volume = {2009},
-journal = {International Mathematics Research Notices},
-doi = {10.1093/imrn/rnn153}
+year = {2005},
 }
 
 @article{Cachazo:2013hca,
@@ -84,3 +111,245 @@ doi = {10.1093/imrn/rnn153}
     pages = "033",
     year = "2014"
 }
+
+@article{fomin2002cluster,
+  author={Fomin, Sergey and Zelevinsky, Andrei},
+  title={Cluster algebras I: foundations},
+  journal={Journal of the American Mathematical Society},
+  volume={15},
+  number={2},
+  pages={497--529},
+  year={2002}
+}
+
+@article{Panzer:2019yxl,
+    author = "Panzer, Erik",
+    title = "{Hepp's bound for Feynman graphs and matroids}",
+    eprint = "1908.09820",
+    archivePrefix = "arXiv",
+    primaryClass = "math-ph",
+    month = "8",
+    year = "2019"
+}
+
+@article{shi1986kazhdan,
+ author="Shi, Jian-Yi",
+  title="The Kazhdan-Lusztig cells in certain affine Weyl groups",
+  journal="Lecture Notes in Mathematics",
+  doi="doi.org/10.1007/BFb0074968",
+  volume={1179},
+  pages={XII, 312},
+  year={1986},
+  publisher={Springer}
+}
+
+@article{athanasiadis1996characteristic,
+  author="Athanasiadis, Christos A",
+   title="Characteristic polynomials of subspace arrangements and finite fields",
+  journal={advances in mathematics},
+  doi="/doi.org/10.1006/aima.1996.0059",
+  volume={122},
+  number={2},
+  pages={193--233},
+  year={1996},
+  publisher={Elsevier}
+}
+
+@article{Postnikov:2006,
+author = {Postnikov, Alexander and Reiner, Victor and Williams, Lauren},
+title = {Faces of Generalized Permutohedra},
+eprint = "0609184",
+archivePrefix = "arXiv",
+primaryClass = "math",
+url="http://cds.cern.ch/record/982477 ",
+year = {2006},
+month = {10},
+pages = {},
+volume = {13},
+journal = {Documenta Mathematica}
+}
+
+@article{Banerjee:2018tun,
+    author = "Banerjee, Pinaki and Laddha, Alok and Raman, Prashanth",
+    title = "{Stokes polytopes: the positive geometry for $\phi^{4}$ interactions}",
+    eprint = "1811.05904",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-th",
+    doi = "10.1007/JHEP08(2019)067",
+    journal = "JHEP",
+    volume = "08",
+    pages = "067",
+    year = "2019"
+}
+
+@article{Raman:2019utu,
+    author = "Raman, Prashanth",
+    title = "{The positive geometry for $\phi^{p}$ interactions}",
+    eprint = "1906.02985",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-th",
+    doi = "10.1007/JHEP10(2019)271",
+    journal = "JHEP",
+    volume = "10",
+    pages = "271",
+    year = "2019"
+}
+
+@article{He:2018pue,
+    author = "He, Song and Yan, Gongwang and Zhang, Chi and Zhang, Yong",
+    title = "{Scattering Forms, Worldsheet Forms and Amplitudes from Subspaces}",
+    eprint = "1803.11302",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-th",
+    doi = "10.1007/JHEP08(2018)040",
+    journal = "JHEP",
+    volume = "08",
+    pages = "040",
+    year = "2018"
+}
+
+@article{Chapoton,
+author = {Chapoton, Frédéric},
+title = {Stokes posets and serpent nests},
+eprint = "1505.05990",
+archivePrefix = "arXiv",
+primaryClass = "math",
+doi="doi: 10.1007/s10468-011-9304-4",
+year = {2015},
+month = {05},
+pages = {},
+volume = {18},
+journal = {Discrete Mathematics and Theoretical Computer Science}
+}
+
+@article{Baryshnikov,
+author = {Baryshnikov, Yuliy},
+year = {2001},
+month = {01},
+pages = {},
+title = {On Stokes sets},
+volume = {21},
+journal = {New developments in singularity theory’ (Cambridge, 2000), NATO Sci. Ser. II Math. Phys. Chem.},
+doi = {10.1007/978-94-010-0834-1_3}
+}
+
+@article{Eulermellin,
+title = "Euler-Mellin integrals and A-hypergeometric functions",
+abstract = "We consider integrals that generalize both Mellin transforms of rational functions of the form 1/f and classical Euler integrals. The domains of integration of our so-called Euler-Mellin integrals are naturally related to the coamoeba of f, and the components of the complement of the closure of this coamoeba give rise to a family of these integrals. After performing an explicit meromorphic continuation of Euler-Mellin integrals, we interpret them as A-hypergeometric functions and discuss their linear independence and relation to Mellin-Barnes integrals.",
+author = "Christine Berkesch and Jens Forsg{\aa}rd and Mikael Passare",
+year = "2014",
+month = mar,
+doi = "10.1307/mmj/1395234361",
+language = "English (US)",
+volume = "63",
+pages = "101--123",
+journal = "Michigan Mathematical Journal",
+issn = "0026-2285",
+publisher = "University of Michigan",
+number = "1",
+}
+
+@article{Mellin,
+author = {Nilsson, Lisa and Passare, Mikael},
+year = {2010},
+month = {10},
+pages = {},
+title = {Mellin Transforms of Multivariate Rational Functions},
+volume = {23},
+journal = {Journal of Geometric Analysis},
+doi = {10.1007/s12220-011-9235-7}
+}
+
+@article{Zelevinskysys,
+author = {Fomin, Sergey and Zelevinsky, Andrei},
+eprint = "0111053",
+archivePrefix = "arXiv",
+primaryClass = "hep-th",
+doi="doi.org/10.4007/annals.2003.158.977",
+year = {2001},
+month = {12},
+pages = {},
+title = {Y-systems and generalized associahedra},
+volume = {158},
+journal = {Annals of Mathematics},
+doi = {10.4007/annals.2003.158.977}
+}
+
+@article{Early:2018zuw,
+      author         = "Early, Nick",
+      title          = "{Generalized permutohedra in the kinematic space}",
+      year           = "2018",
+      eprint         = "1804.05460",
+      archivePrefix  = "arXiv",
+      primaryClass   = "math.CO",
+      SLACcitation   = "%%CITATION = ARXIV:1804.05460;%%"
+}
+
+@article{early2017generalized,
+    title={Generalized Permutohedra, Scattering Amplitudes, and a Cubic Three-Fold},
+    author={Nick Early},
+    year={2017},
+    eprint={1709.03686},
+    archivePrefix={arXiv},
+    primaryClass={math.CO}
+}
+
+@article{Gao:2017dek,
+      author         = "Gao, Xiangrui and He, Song and Zhang, Yong",
+      title          = "{Labelled tree graphs, Feynman diagrams and disk
+                        integrals}",
+      journal        = "JHEP",
+      volume         = "11",
+      year           = "2017",
+      pages          = "144",
+      doi            = "10.1007/JHEP11(2017)144",
+      eprint         = "1708.08701",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-th",
+      SLACcitation   = "%%CITATION = ARXIV:1708.08701;%%"
+}
+
+@article{Li:2018mnq,
+      author         = "Li, Zhenjie and Zhang, Chi",
+      title          = "{Moduli Space of Paired Punctures, Cyclohedra and
+                        Particle Pairs on a Circle}",
+      journal        = "JHEP",
+      volume         = "05",
+      year           = "2019",
+      pages          = "029",
+      doi            = "10.1007/JHEP05(2019)029",
+      eprint         = "1812.10727",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-th",
+      SLACcitation   = "%%CITATION = ARXIV:1812.10727;%%"
+}
+@article{He:2018okq,
+      author         = "He, Song and Zhang, Chi",
+      title          = "{Notes on Scattering Amplitudes as Differential Forms}",
+      journal        = "JHEP",
+      volume         = "10",
+      year           = "2018",
+      pages          = "054",
+      doi            = "10.1007/JHEP10(2018)054",
+      eprint         = "1807.11051",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-th",
+      SLACcitation   = "%%CITATION = ARXIV:1807.11051;%%"
+}
+
+
+@article{Brown:2009qja,
+      author         = "Brown, Francis C. S.",
+      title          = "{Multiple zeta values and periods of moduli spaces M 0 ,n
+                        ( R )}",
+                 doi = "10.24033/asens.2099",
+      journal        = "Annales Sci. Ecole Norm. Sup.",
+      volume         = "42",
+      year           = "2009",
+      pages          = "371",
+      eprint         = "math/0606419",
+      archivePrefix  = "arXiv",
+      primaryClass   = "math.AG",
+      SLACcitation   = "%%CITATION = MATH/0606419;%%"
+}
+
