Updates from Overleaf

--- a/draft_ABP.bib
+++ b/draft_ABP.bib
@@ -353,3 +353,13 @@ doi = {10.4007/annals.2003.158.977}
       SLACcitation   = "%%CITATION = MATH/0606419;%%"
 }
 
+
+@article{Bazier-Matte:2018rat,
+    author = "Bazier-Matte, Véronique and Douville, Guillaume and Mousavand, Kaveh and Thomas, Hugh and Y\i ld\i r\i m, Emine",
+    title = "{ABHY Associahedra and Newton polytopes of $F$-polynomials for finite type cluster algebras}",
+    eprint = "1808.09986",
+    archivePrefix = "arXiv",
+    primaryClass = "math.RT",
+    month = "8",
+    year = "2018"
+}
