--- a/draft_ABP.tex
+++ b/draft_ABP.tex
@@ -707,7 +707,7 @@ The ABHY construction of $\mathscr A_n$ is given by
 	S_{[i,j]}=-C_{[i,j]} \,\,\text{ for all $i<j$,}\quad
 	F_{[i,j]}\geq 0 \,\,\text{ for all $i\leq j$},
 \]
-where $C$'s are positive numbers. As first introduced in~\cite{Arkani-Hamed:2019vag}, it is convenient and illuminating to represent these conditions in a meash diagram of $1+1$-D lattice. For example, we can have the following mesh for ABHY realization of $\mathscr A_3$:  
+where $C$'s are positive numbers. As first introduced in~\cite{Arkani-Hamed:2019vag,Bazier-Matte:2018rat}, it is convenient and illuminating to represent these conditions in a meash diagram of $1+1$-D lattice. For example, we can have the following mesh for ABHY realization of $\mathscr A_3$:  
 \begin{center}
 \begin{tikzpicture}
 	\draw[thick] (-2,-1) -- (1,2) -- (4,-1) -- (3,-2) node[below]{0} -- (0,1);
