Updates from Overleaf

--- a/draft_ABP.bib
+++ b/draft_ABP.bib
@@ -363,3 +363,38 @@ doi = {10.4007/annals.2003.158.977}
     month = "8",
     year = "2018"
 }
+
+@article{delaCruz:2019skx,
+      author         = "de la Cruz, Leonardo",
+      title          = "{Feynman integrals as A-hypergeometric functions}",
+      journal        = "JHEP",
+      volume         = "12",
+      year           = "2019",
+      pages          = "123",
+      doi            = "10.1007/JHEP12(2019)123",
+      eprint         = "1907.00507",
+      archivePrefix  = "arXiv",
+      primaryClass   = "math-ph",
+      SLACcitation   = "%%CITATION = ARXIV:1907.00507;%%"
+}
+
+@article{gelfand1990generalized,
+ author="Gel'fand, Izrail' Moiseevich and Kapranov, Mikhail M and Zelevinsky, Andrei V",
+  title={Generalized Euler integrals and A-hypergeometric functions},
+  journal={Advances in Mathematics},
+  volume={84},
+  number={2},
+  pages={255--271},
+  year={1990},
+  doi="10.1016/0001-8708(90)90048-R",
+  publisher={Academic Press}
+}
+
+@book{saito2013grobner,
+  author={Saito, Mutsumi and Sturmfels, Bernd and Takayama, Nobuki},
+  title={Gr{\"o}bner deformations of hypergeometric differential equations},
+  doi="10.1007/978-3-662-04112-3",
+  volume={6},
+  year={2013},
+  publisher={Springer Science \& Business Media}
+}
